--- a/app/blocks/form-elements/nd-select.scss
+++ b/app/blocks/form-elements/nd-select.scss
@@ -1149,4 +1149,16 @@
       }
     }
   }
+
+  &_fltr {
+    #{$b} {
+      &__list {
+        &--dropdown {
+          #{$b}__placeholder {
+            display: block;
+          }
+        }
+      }
+    }
+  }
 }
