--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -137,6 +137,7 @@ include ../blocks/photo-preview/nd-photo-preview
 include ../blocks/photo-preview/photo-preview
 include ../blocks/places/places
 include ../blocks/popups/popups
+include ../blocks/price-tag/price-tag
 include ../blocks/price/price
 include ../blocks/processing-status/processing-status
 include ../blocks/profile-list/profile-list
