--- a/app/pages/host-account/host-account-finances-statements.pug
+++ b/app/pages/host-account/host-account-finances-statements.pug
@@ -43,6 +43,13 @@ block content
             +board._pad35.__board
               +board-header._align-base
                 +board-title('h2')._fz22 Statements
+                +e.drop-filter
+                  +nd-form-box('')._h40
+                    +nd-select(name="spaces" placeholder="Spaces" data-mobile-title="Spaces" data-choices-classes="nd-choices_fltr nd-choices_h40").js-nd-select
+                      option(value="" selected placeholder) All spaces
+                      option(value="") First Floor Desk Area
+                      option(value="") Second Floor Desk Area
+                      option(value="") Third Floor Desk Area
               +nd-table._rent-state.__table_mt27
                 thead
                   tr
@@ -55,7 +62,7 @@ block content
                 tbody
                   tr
                     td
-                      b 24 April 2020
+                      b 24 April
                     td
                       b Offica space 31
                     td.nd-hide-sm
@@ -69,7 +76,7 @@ block content
                   - for (var i = 0; i < 4; i ++) {
                     tr
                       td
-                        b 24 April 2020
+                        b 24 April
                       td Fixed desk south side
                       td.nd-hide-sm FBC Clerkenwell
                       td £ 356.00
@@ -78,7 +85,7 @@ block content
                         +nd-link-pdf({})(href="#")
                     tr
                       td
-                        b 24 April 2020
+                        b 24 April
                       td Hot desk
                       td.nd-hide-sm FBC Clerkenwell
                       td £ 356.00
@@ -87,7 +94,7 @@ block content
                         +nd-link-pdf({})(href="#")
                     tr
                       td
-                        b 24 April 2020
+                        b 24 April
                       td Office 1129
                       td.nd-hide-sm First Base - Victoria
                       td £ 356.00
