--- a/app/pages/host-account/host-account-finances.pug
+++ b/app/pages/host-account/host-account-finances.pug
@@ -53,7 +53,7 @@ block content
                 tbody
                   tr
                     td
-                      b 24 April 2020
+                      b 24 April
                     td
                       b Offica space 31
                     td
@@ -64,7 +64,7 @@ block content
                       +nd-link-pdf({})(href="#")
                   tr
                     td
-                      b 24 April 2020
+                      b 24 April
                     td Fixed desk south side
                     td £ 356.00
                     td.nd-hide-sm Paid-in
@@ -72,7 +72,7 @@ block content
                       +nd-link-pdf({})(href="#")
                   tr
                     td
-                      b 24 April 2020
+                      b 24 April
                     td Hot desk
                     td £ 356.00
                     td.nd-hide-sm Paid-out
@@ -80,7 +80,7 @@ block content
                       +nd-link-pdf({})(href="#")
                   tr
                     td
-                      b 24 April 2020
+                      b 24 April
                     td Office 1129
                     td £ 356.00
                     td.nd-hide-sm Paid
@@ -90,7 +90,7 @@ block content
                   - for (var i = 0; i < 3; i ++) {
                     tr
                       td
-                        b 24 April 2020
+                        b 24 April
                       td Fixed desk south side
                       td £ 356.00
                       td.nd-hide-sm Paid
@@ -98,7 +98,7 @@ block content
                         +nd-link-pdf({})(href="#")
                     tr
                       td
-                        b 24 April 2020
+                        b 24 April
                       td Hot desk
                       td £ 356.00
                       td.nd-hide-sm Paid
@@ -106,7 +106,7 @@ block content
                         +nd-link-pdf({})(href="#")
                     tr
                       td
-                        b 24 April 2020
+                        b 24 April
                       td Office 1129
                       td £ 356.00
                       td.nd-hide-sm Paid
@@ -117,10 +117,40 @@ block content
                 +nd-link-image('nd-edit')(class='' href='host-account-finances-statements.html').__link_fw600._fz14 View all statements
             +board.__board_ha._ha_stats
               +board-title._fz22 Stats
+              +price-tag
+                +e.price <i>£</i> 24 600
+                +e.label Total income to date
+              +nd-table._info.__table
+                tbody
+                  tr
+                    td Contract signed
+                    td
+                      b 6
+                  tr
+                    td Completed viewings
+                    td
+                      b 28
+                  tr
+                    td Total monthly income
+                    td
+                      b  <i>£</i> 1 890.50
               +e.links_mt60
                 +nd-link-image('nd-edit')(class='' href='#').__link_fw600._fz14 View detailed stats
             +board.__board_ha._ha_bank
               +board-title._fz22 Bank account details
+              +e.text
+                p This is your HOST account bank details.
+                p All transaction proceeds for this Space will be paid-out to this bank account.
+              +nd-table._info.__table
+                tbody
+                  tr
+                    td Account number
+                    td
+                      b 12127784
+                  tr
+                    td Sort code
+                    td
+                      b 40-02-33
               +e.links_mt60
                 +nd-link-image('nd-edit')(class='' href='#').__link_fw600._fz14 Edit bank account details
 
