--- a/app/pages/host-account/host-account-settings-notifications.pug
+++ b/app/pages/host-account/host-account-settings-notifications.pug
@@ -39,15 +39,15 @@ block content
             +e.menu
               +slider-navigation([{name: "Basic information", href: "host-account-settings-basic.html"}, {name: "Password", href: "host-account-settings-password.html"}, {name: "Company details", href: "host-account-settings-company.html"}, {name: "Notification settings", href: "host-account-settings-notifications.html"}], 3, 'Notification settings')
 
-          +dashboard.__dashboard_mt55
-            +board._pb36.__board
+          +dashboard('form').__dashboard_mt55.js-form-with-hidden-panel(data-validated-form)
+            +board._pad48.__board
               +board-title._fz22 Notification settings
-              +nd-table._info._info_subs._fw500.__table_mt27
+              +nd-table._info._info_subs._fw500.__table_mt68
                 thead
                   tr
                     th Reason
                     th Platform notification
-                    th Notify via Email
+                    th Notify via&nbsp;Email
                 tbody
                   each row in getData('table-notifications.json')
                     tr
@@ -58,6 +58,14 @@ block content
                           if cell.content.switch
                             td
                               +nd-switch(cell.content.switch.data)._light(class=(cell.content.switch.class || ''))
+
+            +nd-form-panel()._wide._hidden.is-fixed(data-hidden-panel)
+              .nd-container
+                .nd-content__column_aside.nd-hide-md
+                .nd-content__column_main
+                  +e.controls
+                    +nd-link-icon('cross', 'button')(type="reset")._underline.__reset.js-form-reset Discard <span class="nd-hide-sm">changes</span>
+                    +nd-button('button', true).__button(type="submit") Save <span class="nd-hide-sm">changes</span>
 
 
 block panels
