--- a/app/pages/sitemap/redesign-sitemap.pug
+++ b/app/pages/sitemap/redesign-sitemap.pug
@@ -72,7 +72,7 @@ block content
               +nd-link(href="host-account-settings-basic.html") Spacepool - Host Account - Settings | Basic information (host-account-settings-basic.html)
               +nd-link(href="host-account-settings-company.html") Spacepool - Host Account - Settings | Company details (host-account-settings-company.html)
               +nd-link(href="host-account-settings-password.html") Spacepool - Host Account - Settings | Password (host-account-settings-password.html)
-              //- +nd-link(href="host-account-settings-notifications.html") Spacepool - Host Account - Settings | Notification settings (host-account-settings-notifications.html)
+              +nd-link(href="host-account-settings-notifications.html") Spacepool - Host Account - Settings | Notification settings (host-account-settings-notifications.html)
               //- +nd-link(href="host-account-finances.html") Spacepool - Host Account - Finances (host-account-finances.html)
               //- +nd-link(href="host-account-finances-statements.html") Spacepool - Host Account - Finances | Statements (host-account-finances-statements.html)
               //- +nd-link(href="host-account-kyc.html") Spacepool - Host Account - KYC (host-account-kyc.html)
