--- a/app/blocks/table/nd-table.scss
+++ b/app/blocks/table/nd-table.scss
@@ -512,20 +512,21 @@
         font-family: $font-stolzl;
         font-weight: 400;
         text-align: left;
-        padding: 11px 135px 34px 0;
+        padding: 12px 135px 34px 0;
+        letter-spacing: -.015em;
 
         @include rule(font-size, (xl: 14px, xlg: 14, lg: 14, md: 14, sm: 14));
 
         @include screen('xlg', max, 2) {
-          padding: pxtovw(11, 1660) pxtovw(135, 1660) pxtovw(34, 1660) 0;
+          padding: pxtovw(12, 1660) pxtovw(135, 1660) pxtovw(34, 1660) 0;
         }
 
         @include screen('lg', max, 2) {
-          padding: pxtovw(11, 1366) pxtovw(60, 1366) pxtovw(34, 1366) 0;
+          padding: pxtovw(12, 1366) pxtovw(60, 1366) pxtovw(34, 1366) 0;
         }
 
         @include screen('md', max, 2) {
-          padding: pxtovw(11, 960) pxtovw(30, 960) pxtovw(34, 960) 0;
+          padding: pxtovw(12, 960) pxtovw(30, 960) pxtovw(34, 960) 0;
         }
 
         @include screen('sm', max, 2) {
@@ -535,6 +536,10 @@
         &:not(:first-child) {
           text-align: center;
           white-space: nowrap;
+
+          @include screen('sm', max, 2) {
+            white-space: normal;
+          }
         }
 
         &:first-child {
@@ -543,20 +548,20 @@
       }
 
       td {
-        padding: 11px 135px 11px 0;
+        padding: 12px 135px 11px 0;
         vertical-align: middle;
         text-align: left;
 
         @include screen('xlg', max, 2) {
-          padding: pxtovw(11, 1660) pxtovw(135, 1660) pxtovw(11, 1660) 0;
+          padding: pxtovw(12, 1660) pxtovw(135, 1660) pxtovw(11, 1660) 0;
         }
 
         @include screen('lg', max, 2) {
-          padding: pxtovw(11, 1366) pxtovw(60, 1366) pxtovw(11, 1366) 0;
+          padding: pxtovw(12, 1366) pxtovw(60, 1366) pxtovw(11, 1366) 0;
         }
 
         @include screen('md', max, 2) {
-          padding: pxtovw(11, 960) pxtovw(30, 960) pxtovw(11, 960) 0;
+          padding: pxtovw(12, 960) pxtovw(30, 960) pxtovw(11, 960) 0;
         }
 
         @include screen('sm', max, 2) {
@@ -576,6 +581,10 @@
           text-align: center;
           line-height: 0;
           white-space: nowrap;
+
+          @include screen('sm', max, 2) {
+            white-space: normal;
+          }
         }
       }
     }
