separate file for font styles

--- a/app/blocks/board/board.scss
+++ b/app/blocks/board/board.scss
@@ -438,6 +438,12 @@
       }
     }
 
+    &_mt45 {
+      &:not(:first-child) {
+        @include rule(margin-top, (xl: 45px, xlg: 45, lg: 45, md: 45, sm: 30));
+      }
+    }
+
     &_mt68 {
       &:not(:first-child) {
         @include rule(margin-top, (xl: 68px, xlg: 68, lg: 68, md: 68, sm: 33));
@@ -467,6 +473,10 @@
         }
       }
     }
+  }
+
+  &__drop-filter {
+    @include rule(width, (xl: 232px, xlg: 232, lg: 232, md: 232, sm: 160));
   }
 
   &__links {
