--- a/app/pages/host-account/host-account-finances-statements.pug
+++ b/app/pages/host-account/host-account-finances-statements.pug
@@ -39,9 +39,9 @@ block content
             +e.menu
               +slider-navigation([{name: "Statements", href: "host-account-finances-statements.html"}, {name: "Bank account details", href: "host-account-finances.html"}, {name: "Account stats", href: "host-account-finances.html"}], 0, 'Statements')
 
-          +dashboard.__dashboard_mt
-            +board._pad35.__board
-              +board-header._align-base
+          +dashboard.__dashboard_mt55
+            +board.__board
+              +board-header._fx
                 +board-title('h2')._fz22 Statements
                 +e.drop-filter
                   +nd-form-box('')._h40
@@ -50,7 +50,7 @@ block content
                       option(value="") First Floor Desk Area
                       option(value="") Second Floor Desk Area
                       option(value="") Third Floor Desk Area
-              +nd-table._rent-state.__table_mt27
+              +nd-table._ledger._ledger_c6._blight.__table_mt45._mb0
                 thead
                   tr
                     th Issued
