--- a/app/pages/host-account/host-account-finances.pug
+++ b/app/pages/host-account/host-account-finances.pug
@@ -42,12 +42,12 @@ block content
           +dashboard._host-account.__dashboard_mt
             +board.__board_ha._ha_state
               +board-title._fz22 Statements
-              +nd-table._rent-state.__table_mt27
+              +nd-table._ledger._blight.__table_mt27
                 thead
                   tr
                     th Issued
                     th Rent
-                    th Price
+                    th Amount
                     th.nd-hide-sm Status
                     th Invoice
                 tbody
@@ -120,7 +120,7 @@ block content
               +price-tag
                 +e.price <i>£</i> 24 600
                 +e.label Total income to date
-              +nd-table._info.__table
+              +nd-table._info._blight.__table
                 tbody
                   tr
                     td Contract signed
@@ -141,7 +141,7 @@ block content
               +e.text
                 p This is your HOST account bank details.
                 p All transaction proceeds for this Space will be paid-out to this bank account.
-              +nd-table._info.__table
+              +nd-table._info._blight.__table
                 tbody
                   tr
                     td Account number
