--- a/app/styles/helpers/_mixins.scss
+++ b/app/styles/helpers/_mixins.scss
@@ -18,7 +18,7 @@
     font-family: $name;
     font-style: $style;
     font-weight: $weight;
-    font-display: $fontdisplay;
+    font-display: swap;
     src: url($path + $fontname + '.eot');
     src: url('' + $path + $fontname + '.eot?#iefix') format('embedded-opentype'), url('' + $path + $fontname + '.woff2') format('woff2'), url('' + $path + $fontname + '.woff') format('woff'), url('' + $path + $fontname + '.ttf') format('truetype'), url('' + $path + $fontname + '.svg#' + $fontname) format('svg');
   }
