update from https://docs.google.com/document/d/1NRV_KqKucPGXMi9SztpROCV0DZd55o3-Poz9HHdVGSQ/edit - numbers #2,#3, #4 (in rent part), #8

--- a/app/blocks/informer/informer.pug
+++ b/app/blocks/informer/informer.pug
@@ -1,3 +1,7 @@
 mixin informer()
   +b.informer&attributes(attributes)
     block
+
+mixin nd-informer()
+  +b.nd-informer&attributes(attributes)
+    block
