--- a/app/blocks/link/nd-link.scss
+++ b/app/blocks/link/nd-link.scss
@@ -699,4 +699,10 @@
       background-size: pxtovw(6, 375) pxtovw(11, 375);
     }
   }
+
+  &.is-disabled {
+    opacity: .2;
+    cursor: not-allowed;
+    pointer-events: none;
+  }
 }
