--- a/app/components/payment-form/payment-form.pug
+++ b/app/components/payment-form/payment-form.pug
@@ -5,7 +5,29 @@ mixin payment-form()
       +e.text_mt25 Slect prefered payment method type and fill the form below
     +form-section
       +e.block
-        +nd-grid
+        +nd-grid.nd-grid_int37
+          +nd-grid-col({xl: 6})
+            +form-section-wrapper
+              +radio-button({name: 'account', value: 'personal', checked: false, switch: 'personal'}) Personal <span class="nd-hide-from-sm">acc</span><span class="nd-hide-sm">account</span>
+          +nd-grid-col({xl: 6})
+            +form-section-wrapper
+              +radio-button({name: 'account', value: 'company', checked: true, switch: 'company'}) Comany <span class="nd-hide-from-sm">acc</span><span class="nd-hide-sm">account</span>
+      +e.block
+        +nd-grid.nd-grid_int37
+          +nd-grid-col({xl: 12})(data-form-switchable-item="company")
+            +form-section-wrapper
+              +nd-form-box('Company name')
+                +nd-input(type="text" name="companyName" placeholder="Company name" required)
+          +nd-grid-col({xl: 12})(data-form-switchable-item="personal")
+            +form-section-wrapper
+              +nd-form-box('First Name')
+                +nd-input(type="text" name="firstName" placeholder="First Name'" required)
+          +nd-grid-col({xl: 12})(data-form-switchable-item="personal")
+            +form-section-wrapper
+              +nd-form-box('Last Name')
+                +nd-input(type="text" name="lastName" placeholder="Last Name'" required)
+      +e.block
+        +nd-grid.nd-grid_int37
           +nd-grid-col({xl: 6})
             +form-section-wrapper
               +radio-button({name: 'method', value: 'iban', checked: false, switch: 'iban'}) IBAN account
@@ -26,6 +48,22 @@ mixin payment-form()
             +form-section-wrapper
               +nd-form-box('Sort Code')
                 +nd-input(type="text" name="sortCode" placeholder="Sort Code" required)
+          +nd-grid-col({xl: 12})
+            +form-section-wrapper
+              +nd-form-box('Billing address line 1')
+                +nd-input(type="text" name="billingAddres1" placeholder="Billing address line 1" required)
+          +nd-grid-col({xl: 12})
+            +form-section-wrapper
+              +nd-form-box('Billing address line 2')
+                +nd-input(type="text" name="billingAddres2" placeholder="Billing address line 2" required)
+          +nd-grid-col({xl: 6, sm: 12})
+            +form-section-wrapper
+              +nd-form-box('Town or city')
+                +nd-input(type="text" name="city" placeholder="Town or city" required)
+          +nd-grid-col({xl: 6, sm: 12})
+            +form-section-wrapper
+              +nd-form-box('Post code')
+                +nd-input(type="text" name="postCode" placeholder="Post code" required)
         +e.buttons
           +nd-button('button', true).__button_wide(type="submit") Add payment method
     block
