--- a/app/pages/host-account/host-account-settings-basic.pug
+++ b/app/pages/host-account/host-account-settings-basic.pug
@@ -60,9 +60,12 @@ block content
                     +nd-form-box('Email')._bg-white
                       +nd-input(type="email" name="email" placeholder="Email" required value="esdesign.lv@gmail.com")
                 +e.row_mt38
+                  +form-section-wrapper._w144._md-wide
+                    +nd-form-box('Country code')._bg-white
+                      +nd-input(type="text" name="countryCode" placeholder="Country code")
                   +form-section-wrapper
-                    +nd-form-box('Phone No')._bg-white
-                      +nd-input(type="tel" name="phoneNumber" placeholder="Phone number" value="2359892531")
+                    +nd-form-box('Phone number')._bg-white
+                      +nd-input(type="tel" name="phoneNumber" placeholder="Phone number")
 
             +nd-form-panel()._wide._hidden.is-fixed(data-hidden-panel)
               .nd-container
