--- a/app/components/payment-method/payment-method.pug
+++ b/app/components/payment-method/payment-method.pug
@@ -20,6 +20,6 @@ mixin payment-method(data)
       +e.buttons
         +nd-button('button')(type="button" class=(data.button.class || '')).nd-button_pad10.__button_add!=data.button.name
         if data.button.help
-          +nd-info-tooltip().js-tooltip.__info(href="#" title=(data.button.help || 'Help mesage'))
+          +nd-info-tooltip().js-tooltip.__info(href="#" title='You can’t delete this payment method while it has been used to pay for and active contract. If you want to change your payment method, add a new payment method and then change it inside the existing contract page. After that you will be able to delete this method.')
 
     block
