--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -226,6 +226,7 @@ $nd-color-scroll: #eee;
 $nd-color-heart-gray: #bdbdbd;
 $nd-color-border-gray: #d3dfed;
 $nd-color-green: #69c693;
+$nd-color-border-blue: #106dc2;
 
 // ##########
 // Transitions
