--- a/app/blocks/arrange-viewing-form/arrange-viewing-form.scss
+++ b/app/blocks/arrange-viewing-form/arrange-viewing-form.scss
@@ -22,11 +22,11 @@
   @include screen('md', max, 2) {
     align-items: center;
     align-content: center;
-    padding: pxtovw(5, 960) 0;
+    padding: pxtovw(16, 960) 0;
   }
 
   @include screen('sm', max, 2) {
-    padding: pxtovw(5, 375) 0;
+    padding: pxtovw(16, 375) 0;
   }
 
   &__top {
@@ -70,7 +70,7 @@
   &__timeblock {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-start;
     width: 100%;
 
     @include rule(margin-top, (xl: 25px, xlg: 25, lg: 25, md: 0));
