--- a/app/blocks/form-elements/error-message.scss
+++ b/app/blocks/form-elements/error-message.scss
@@ -51,6 +51,17 @@
     }
   }
 
+  .arrange-viewing-form & {
+    display: none;
+    background: transparent;
+
+    @include rule(margin-top, (xl: 8px, xlg: 8, lg: 8, md: 8, sm: 8));
+    @include rule(font-size, (xl: 14px, xlg: 14, lg: 14, md: 14, sm: 14));
+
+    color: $nd-color-error-text;
+    line-height: (17 / 14);
+  }
+
   .is-error & {
     display: block;
     opacity: 1;
