--- a/app/components/popup-arrange-viewing/nd-popup-arrange-viewing.scss
+++ b/app/components/popup-arrange-viewing/nd-popup-arrange-viewing.scss
@@ -41,7 +41,7 @@
       padding: 0 0 40px;
 
       @include screen('xlg', max, 2) {
-        padding:  0 0 pxtovw(40, 1660);
+        padding: 0 0 pxtovw(40, 1660);
       }
 
       @include screen('lg', max, 2) {
@@ -92,12 +92,13 @@
       @include screen('md', max, 2) {
         pointer-events: auto;
         opacity: 1;
-        height: pxtovw(111, 960);
+        height: auto;
+        // height: pxtovw(111, 960);
         box-shadow: 0 pxtovw(-1, 960) pxtovw(2, 960) rgba(0, 0, 0, .05);
       }
 
       @include screen('sm', max, 2) {
-        height: pxtovw(111, 375);
+        // height: pxtovw(111, 375);
         box-shadow: 0 pxtovw(-1, 375) pxtovw(2, 375) rgba(0, 0, 0, .05);
       }
 
