--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -227,6 +227,7 @@ $nd-color-heart-gray: #bdbdbd;
 $nd-color-border-gray: #d3dfed;
 $nd-color-green: #69c693;
 $nd-color-border-blue: #106dc2;
+$nd-color-error-text: #d33427;
 
 // ##########
 // Transitions
